[tool.poetry]
name = "pipdev"
version = "0.1.0"
description = ""
authors = ["Darius Morawiec <nok@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
packaging = "^21.0"
tabulate = "^0.8"
colorama = "^0.4"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
