[project]
name = "pip-dev"
version = "0.2.0"
description = "An interactive tool for developers to test defined specifiers for version handling."
readme = "README.md"
authors = [
    { name = "Darius Morawiec", email = "nok@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4",
    "packaging>=23.0",
    "tabulate>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
]
